Have header be link to github profile

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 <div class="home">
-  <h1>dimroc experiments</h1>
+  <h1><a href="http://www.github.com/dimroc">dimroc experiments</a></h1>
   <ul>
       <li ng-repeat="project in projects" class="{{project.key}}">
       <a href="{{project.url}}">
