Update project monitor image

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -50,6 +50,7 @@ body {
     .projectmonitor {
       background-image: url("../images/ProjectMonitor.png");
       background-repeat: no-repeat;
+      background-size: auto 250px;
       background-position: right bottom;
     }
 
