Position webgl canvas on the right of entry

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -41,6 +41,15 @@ body {
       }
     }
 
+    .webgl {
+      position: relative;
+
+      canvas {
+        position: absolute;
+        right: 10px;
+      }
+    }
+
     .hoodfrequency {
       background-image: url("../images/hoodFrequency.png");
       background-repeat: no-repeat;
