--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,9 @@
 <div class="home">
-  <h1><a href="http://www.github.com/dimroc">dimroc experiments</a></h1>
+  <div class="container">
+    <div class="row-fluid">
+      <h1 class="span12"><span class="pull-left">dimroc experiments</span> <span class="span6 pull-right"><a href="http://www.dimroc.com">blog</a> <a href="http://www.github.com/dimroc">github</a></span></h1>
+    </div>
+  </div>
   <ul>
       <li ng-repeat="project in projects" class="{{project.key}}">
       <a href="{{project.url}}">
