Update experiments with manhattan forum

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -57,6 +57,13 @@ body {
       background-position: right bottom;
     }
 
+    .manhattanforum {
+      background-image: url("../images/ManhattanForumBlack5S.png");
+      background-repeat: no-repeat;
+      background-size: auto 250px;
+      background-position: right bottom;
+    }
+
     .projectmonitor {
       background-image: url("../images/ProjectMonitor.png");
       background-repeat: no-repeat;
