--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
 <div class="home">
   <div class="container">
     <div class="row-fluid">
-      <h1 class="span12"><span class="pull-left">dimroc experiments</span> <span class="span6 pull-right"><a href="http://www.dimroc.com">blog</a> <a href="http://www.github.com/dimroc">github</a></span></h1>
+      <h1 class="span12"><span class="pull-left">dimroc experiments</span> <span class="span6 pull-right"><a href="http://blog.dimroc.com">blog</a> <a href="http://www.github.com/dimroc">github</a></span></h1>
     </div>
   </div>
   <ul>
