Switch boroughs key to real-time-tweets

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -97,7 +97,7 @@ h2 {
       background-position: right bottom;
     }
 
-    .boroughs {
+    .real-time-tweets {
       background-image: url("../images/WindowIntoBorough.png");
       background-repeat: no-repeat;
       background-position: right bottom;
