Add row for Urban Events

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -76,6 +76,13 @@ h2 {
       }
     }
 
+    .urban-events {
+      background-image: url("../images/UrbanEvents.jpg");
+      background-repeat: no-repeat;
+      background-position: right -30px;
+      background-size: 400px auto;
+    }
+
     .hoodfrequency {
       background-image: url("../images/hoodFrequency.png");
       background-repeat: no-repeat;
