Add entry for MachineLearningHoods

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -76,6 +76,18 @@ h2 {
       }
     }
 
+    .machine-learning-hoods {
+      background-image: url("../images/MachineLearningHoods.jpg");
+      background-repeat: no-repeat;
+      background-position: right 0px;
+      background-size: 300px auto;
+
+      @media (max-width: $screen-sm-min) {
+        background-position: right 40px;
+        background-size: 300px auto;
+      }
+    }
+
     .urban-events {
       background-image: url("../images/UrbanEvents.jpg");
       background-repeat: no-repeat;
