Reduce large .pngs by replacing them w .jpgs

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -114,7 +114,7 @@ h2 {
     }
 
     .manhattanforum {
-      background-image: url("../images/ManhattanForumBlack5S.png");
+      background-image: url("../images/ManhattanForumBlack5S.jpg");
       background-repeat: no-repeat;
       background-size: auto 150px;
       background-position: right bottom;
@@ -135,7 +135,7 @@ h2 {
     }
 
     .snapshots {
-      background-image: url("../images/TweetsAsPixels2.png");
+      background-image: url("../images/TweetsAsPixels2.jpg");
       background-size: auto 150px;
     }
 
