Add homework junkie to list for nostalgia’s sake

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -157,6 +157,7 @@ h2 {
       background-image: url("../images/homework-junkie.jpg");
       background-repeat: no-repeat;
       background-position: right bottom;
+      background-size: auto 200px;
     }
   }
 }
