WIP: Entry for Machine Learning Long Ids

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -76,6 +76,13 @@ h2 {
       }
     }
 
+    .machine-learning-long-ids {
+      background-image: url("../images/MachineLearningLongIdsSideways.png");
+      background-repeat: no-repeat;
+      background-position: right -80px;
+      background-size: 420px auto;
+    }
+
     .left-and-depth {
       background-image: url("../images/leftAndDepth.jpg");
       background-repeat: no-repeat;
