--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -106,6 +106,18 @@ h2 {
       }
     }
 
+    .twitter-beat-the-street {
+      background-image: url("../images/Twitter_Media_Origin_Splits.jpg");
+      background-repeat: no-repeat;
+      background-position: 240px bottom;
+      background-size: 500px auto;
+
+      @media (max-width: $screen-sm-min) {
+        background-position: right bottom;
+        background-size: 350px auto;
+      }
+    }
+
     .urban-events {
       background-image: url("../images/UrbanEvents.jpg");
       background-repeat: no-repeat;
