Add ETL Showdown entry

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -125,6 +125,13 @@ h2 {
       background-size: 400px auto;
     }
 
+    .etl-language-showdown {
+      background-image: url("../images/EtlLanguageShowdown.jpg");
+      background-repeat: no-repeat;
+      background-position: right bottom;
+      background-size: 400px auto;
+    }
+
     .hoodfrequency {
       background-image: url("../images/hoodFrequency.png");
       background-repeat: no-repeat;
