WIP: Link to selfie segmentation

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -76,6 +76,13 @@ h2 {
       }
     }
 
+    .selfie-segmentation {
+      background-image: url("../images/videoPortraitUdnie.gif");
+      background-repeat: no-repeat;
+      background-position: right top;
+      background-size: 150px auto;
+    }
+
     .machine-learning-long-ids {
       background-image: url("../images/MachineLearningLongIdsSideways.png");
       background-repeat: no-repeat;
