Add entry for counting crowds and lines

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -76,6 +76,13 @@ h2 {
       }
     }
 
+    .counting-crowds {
+      background-image: url("../images/countingCrowds.jpg");
+      background-repeat: no-repeat;
+      background-position: right bottom;
+      background-size: 170px auto;
+    }
+
     .selfie-segmentation {
       background-image: url("../images/videoPortraitUdniePhotoshopped.gif");
       background-repeat: no-repeat;
