Add globalization and darkage

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -189,6 +189,13 @@ h2 {
       background-size: auto 200px;
     }
 
+    .globalization {
+      background-image: url("../images/globalization.jpg");
+      background-repeat: no-repeat;
+      background-position: right bottom;
+      background-size: auto 180px;
+    }
+
     .homeworkjunkie {
       background-image: url("../images/homework-junkie.jpg");
       background-repeat: no-repeat;
