--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -32,6 +32,18 @@ h2 {
 }
 
 .home {
+  #mc_embed_signup {
+    padding: 0 20px;
+    form {
+      padding: 0;
+    }
+
+    input.email,
+    input.button {
+      display: inline-block;
+    }
+  }
+
   ul {
     list-style-type: none;
     padding-left: 0;
@@ -41,7 +53,7 @@ h2 {
       height: 150px;
       margin: 20px 0;
 
-      a {
+      a.project {
         display: block;
         width: 100%;
         height: 100%;
@@ -50,18 +62,18 @@ h2 {
         &:hover {
           text-decoration: none;
         }
+      }
 
-        h2 {
-          vertical-align: top;
-          display: inline-block;
-          padding: 20px;
-          margin: 0;
-          background-color: rgba(255,255,255,0.4);
+      h2 {
+        vertical-align: top;
+        display: inline-block;
+        padding: 20px;
+        margin: 0;
+        background-color: rgba(255,255,255,0.4);
 
-          @media(max-width: $screen-sm-min) {
-            background-color: rgba(255,255,255,0.8);
-            display: block;
-          }
+        @media(max-width: $screen-sm-min) {
+          background-color: rgba(255,255,255,0.8);
+          display: block;
         }
       }
     }
