Change links from http to https

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,6 @@
 <div class="home">
   <header>
-    <h1 class="span12"><span class="pull-left">dimroc experiments</span> <span class="span6 pull-right"><a href="http://blog.dimroc.com">blog</a> <a href="http://www.github.com/dimroc">github</a></span></h1>
+    <h1 class="span12"><span class="pull-left">dimroc experiments</span> <span class="span6 pull-right"><a href="https://blog.dimroc.com">blog</a> <a href="https://www.github.com/dimroc">github</a></span></h1>
   </header>
   <ul>
     <li ng-repeat="project in firstProjects" class="col-md-6">
