Add preliminary entry for counting crowds on CoreML

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -93,6 +93,13 @@ h2 {
       }
     }
 
+    .counting-crowds-coreml {
+      background-image: url("../images/CrowdCountiOS.experiment.gif");
+      background-repeat: no-repeat;
+      background-position: right bottom;
+      background-size: 250px auto;
+    }
+
     .counting-crowds {
       background-image: url("../images/countingCrowdsPair.jpg");
       background-repeat: no-repeat;
