update deps;add game2video

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -93,6 +93,13 @@ h2 {
       }
     }
 
+    .game2video-runway {
+      background-image: url("../images/fps_depth_egypt.gif");
+      background-repeat: no-repeat;
+      background-position: right 65px;
+      background-size: 360px auto;
+    }
+
     .counting-crowds-coreml {
       background-image: url("../images/CrowdCountiOS.experiment.gif");
       background-repeat: no-repeat;
