tweak game2video copy and h2 style

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -98,6 +98,10 @@ h2 {
       background-repeat: no-repeat;
       background-position: right 65px;
       background-size: 360px auto;
+
+      h2 {
+        padding-right: 18px;
+      }
     }
 
     .counting-crowds-coreml {
